--- a/index.html
+++ b/index.html
@@ -1,5 +1,42 @@
 <html>
 <body>
-  Hi it's runhead
+  Hi it's runhead.
+  Here's a shop:
+
+  <!-- Load Stripe.js on your website. -->
+<script src="https://js.stripe.com/v3"></script>
+
+<!-- Create a button that your customers click to complete their purchase. -->
+<button id="checkout-button">Pay</button>
+<div id="error-message"></div>
+
+<script>
+  var stripe = Stripe('pk_test_sLM7okmFFAH9JpukV5yTVrm3', {
+    betas: ['checkout_beta_4']
+  });
+
+  var checkoutButton = document.getElementById('checkout-button');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      items: [{sku: 'sku_EN5lSaovnlUrnF', quantity: 1}],
+
+      // Note that it is not guaranteed your customers will be redirected to this
+      // URL *100%* of the time, it's possible that they could e.g. close the
+      // tab between form submission and the redirect.
+      successUrl: 'https://leohemsted.github.io/runhead/success',
+      cancelUrl: 'https://leohemsted.github.io/runhead/cancelled',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+</script>
 </body>
 </html>
