--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <script src="https://js.stripe.com/v3"></script>
+  <link rel="stylesheet" type="text/css" href="style1.css" /> 
 </head>
 <body>
   Hi it's runhead.
